# STM32H7_Project

./: CMakeLists.txt  CMakePresets.json  Creating  ELF  build_log.txt  post_build.bat
UDAan_App/: main.cpp  main.h  stm32h7xx_it.c  stm32h7xx_it.h
UDAan_SDK/: CMakeLists.txt
UDAan_SDK/Include/: UDAan_gpio.h  stm32h7xx_hal_conf.h
UDAan_SDK/toolchains/: arm-none-eabi-gcc.cmake
UDAan_SDK/utilities/: cm7_linker.ld  system_stm32h747xx.c
